--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tsparticles/slim": "^3.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
